# MyBarCode

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ext/: filesignature.cpp  format.cpp  infix_iterator.h
src/: BoostHeaders.h  MagickHeaders.h  MwBarCode.cpp  MwBarCode.h  MwColor.cpp  MwColor.h  MwImage.cpp  MwImage.h  MwResolution.cpp  MwResolution.h  ProcessImages.cpp  ProcessImages.h  utils.cpp  utils.h
